# diabetesnet

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
models/: model_20250202153622.pth
src/: main.py
src/diabetesnet/: data_parser.py  neural_network.py
src/diabetesnet/utils/: argparse.py
utils/: requirements.txt
