[project]
name = "diabetesnet"
version = "0.0.1"
description = "Feedforward Neural Network for Diabetes Prediction"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["utils/requirements.txt"]}

[tool.isort]
line_length = 88
profile = "black"

[tool.black]
line-length = 88